--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "homepage": "https://gitlab.com/webdevtemp/base-js#readme",
   "dependencies": {
+    "@material-ui/core": "^4.9.2",
     "@reach/router": "1.3.1",
     "core-js": "3.6.4",
     "express": "4.17.1",
