--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "homepage": "https://gitlab.com/webdevtemp/base-js#readme",
   "dependencies": {
+    "@loadable/component": "5.12.0",
+    "@loadable/server": "5.12.0",
     "@material-ui/core": "4.9.2",
     "@reach/router": "1.3.1",
     "core-js": "3.6.4",
@@ -28,7 +30,10 @@
     "@babel/core": "7.8.4",
     "@babel/preset-env": "7.8.4",
     "@babel/preset-react": "7.8.3",
+    "@loadable/babel-plugin": "^5.12.0",
+    "@loadable/webpack-plugin": "^5.12.0",
     "babel-loader": "8.0.6",
+    "babel-plugin-dynamic-import-node": "^2.3.0",
     "clean-webpack-plugin": "3.0.0",
     "cross-env": "7.0.0",
     "eslint": "6.8.0",
