--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@loadable/component": "5.12.0",
     "@loadable/server": "5.12.0",
     "@material-ui/core": "4.9.2",
+    "@material-ui/icons": "4.9.1",
     "@reach/router": "1.3.1",
     "core-js": "3.6.4",
     "express": "4.17.1",
@@ -30,16 +31,16 @@
     "@babel/core": "7.8.4",
     "@babel/preset-env": "7.8.4",
     "@babel/preset-react": "7.8.3",
-    "@loadable/babel-plugin": "^5.12.0",
-    "@loadable/webpack-plugin": "^5.12.0",
+    "@loadable/babel-plugin": "5.12.0",
+    "@loadable/webpack-plugin": "5.12.0",
     "babel-loader": "8.0.6",
-    "babel-plugin-dynamic-import-node": "^2.3.0",
+    "babel-plugin-dynamic-import-node": "2.3.0",
     "clean-webpack-plugin": "3.0.0",
     "cross-env": "7.0.0",
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.10.0",
     "eslint-loader": "3.0.3",
-    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-prettier": "3.1.2",
     "eslint-plugin-react": "7.18.3",
     "husky": "4.2.2",
     "lint-staged": "10.0.7",
