--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "4.17.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
+    "react-google-maps": "9.4.5",
     "react-helmet": "5.2.1"
   },
   "devDependencies": {
