--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@material-ui/core": "4.9.2",
     "@material-ui/icons": "4.9.1",
     "@reach/router": "1.3.1",
+    "axios": "0.19.2",
     "core-js": "3.6.4",
     "express": "4.17.1",
     "react": "16.12.0",
