--- a/cms/package.json
+++ b/cms/package.json
@@ -21,6 +21,7 @@
     "@keystonejs/app-graphql": "^5.0.1",
     "@keystonejs/auth-password": "^5.0.1",
     "@keystonejs/fields": "^6.0.0",
+    "@keystonejs/fields-wysiwyg-tinymce": "^5.1.0",
     "@keystonejs/keystone": "^5.3.0",
     "cross-env": "^5.2.0"
   }
