--- a/app/package.json
+++ b/app/package.json
@@ -16,18 +16,24 @@
   },
   "homepage": "https://gitlab.com/webdevtemp/base-js#readme",
   "dependencies": {
+    "@apollo/react-hooks": "3.1.3",
+    "@apollo/react-ssr": "3.1.3",
     "@loadable/component": "5.12.0",
     "@loadable/server": "5.12.0",
     "@material-ui/core": "4.9.2",
     "@material-ui/icons": "4.9.1",
     "@reach/router": "1.3.1",
+    "apollo-boost": "0.4.7",
     "axios": "0.19.2",
     "core-js": "3.6.4",
     "express": "4.17.1",
+    "graphql": "14.6.0",
+    "node-fetch": "2.6.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-google-maps": "9.4.5",
-    "react-helmet": "5.2.1"
+    "react-helmet": "5.2.1",
+    "unfetch": "4.1.0"
   },
   "devDependencies": {
     "@babel/core": "7.8.4",
