--- a/cms/package.json
+++ b/cms/package.json
@@ -23,6 +23,7 @@
     "@keystonejs/fields": "^6.0.0",
     "@keystonejs/fields-wysiwyg-tinymce": "^5.1.0",
     "@keystonejs/keystone": "^5.3.0",
+    "bcrypt": "^4.0.0",
     "cross-env": "^5.2.0"
   }
 }
