--- a/cms/package.json
+++ b/cms/package.json
@@ -24,8 +24,6 @@
     "@keystonejs/fields-wysiwyg-tinymce": "^5.1.0",
     "@keystonejs/keystone": "^5.3.0",
     "bcrypt": "^4.0.0",
-    "connect-mongo": "^3.2.0",
-    "cross-env": "^5.2.0",
-    "express-session": "^1.17.0"
+    "cross-env": "^5.2.0"
   }
 }
