--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,7 @@
     "@loadable/server": "5.12.0",
     "@material-ui/core": "4.9.2",
     "@material-ui/icons": "4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.45",
     "@reach/router": "1.3.1",
     "apollo-boost": "0.4.7",
     "axios": "0.19.2",
