--- a/app/package.json
+++ b/app/package.json
@@ -22,10 +22,10 @@
     "@loadable/server": "5.12.0",
     "@material-ui/core": "4.9.2",
     "@material-ui/icons": "4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.45",
     "@reach/router": "1.3.1",
+    "@types/googlemaps": "3.39.3",
+    "@types/markerclustererplus": "2.1.33",
     "apollo-boost": "0.4.7",
-    "axios": "0.19.2",
     "core-js": "3.6.4",
     "express": "4.17.1",
     "graphql": "14.6.0",
