--- a/app/package.json
+++ b/app/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "react-isomorphic",
+  "name": "new-riga-custom",
   "version": "1.0.0",
   "author": "Vladimir Zhelvis",
   "license": "MIT",
-  "description": "env for build react isomorphic apps",
+  "description": "React isomorphic apps for 'New Riga Custom' Service",
   "main": "server.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack --watch",
@@ -20,42 +20,43 @@
     "@apollo/react-ssr": "3.1.3",
     "@loadable/component": "5.12.0",
     "@loadable/server": "5.12.0",
-    "@material-ui/core": "4.9.2",
+    "@material-ui/core": "4.9.7",
     "@material-ui/icons": "4.9.1",
-    "@reach/router": "1.3.1",
+    "@reach/router": "1.3.3",
     "@types/googlemaps": "3.39.3",
     "@types/markerclustererplus": "2.1.33",
     "apollo-boost": "0.4.7",
+    "classnames": "2.2.6",
     "core-js": "3.6.4",
     "express": "4.17.1",
     "graphql": "14.6.0",
     "node-fetch": "2.6.0",
-    "react": "16.12.0",
-    "react-dom": "16.12.0",
+    "react": "16.13.0",
+    "react-dom": "16.13.0",
     "react-google-maps": "9.4.5",
     "react-helmet": "5.2.1",
     "unfetch": "4.1.0"
   },
   "devDependencies": {
-    "@babel/core": "7.8.4",
-    "@babel/preset-env": "7.8.4",
+    "@babel/core": "7.8.7",
+    "@babel/preset-env": "7.8.7",
     "@babel/preset-react": "7.8.3",
     "@loadable/babel-plugin": "5.12.0",
     "@loadable/webpack-plugin": "5.12.0",
     "babel-loader": "8.0.6",
     "babel-plugin-dynamic-import-node": "2.3.0",
     "clean-webpack-plugin": "3.0.0",
-    "cross-env": "7.0.0",
+    "cross-env": "7.0.2",
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.10.0",
     "eslint-loader": "3.0.3",
     "eslint-plugin-prettier": "3.1.2",
-    "eslint-plugin-react": "7.18.3",
-    "husky": "4.2.2",
-    "lint-staged": "10.0.7",
-    "nodemon-webpack-plugin": "4.2.2",
+    "eslint-plugin-react": "7.19.0",
+    "husky": "4.2.3",
+    "lint-staged": "10.0.8",
+    "nodemon-webpack-plugin": "4.3.1",
     "prettier": "1.19.1",
-    "webpack": "4.41.6",
+    "webpack": "4.42.0",
     "webpack-cli": "3.3.11",
     "webpack-node-externals": "1.7.2"
   },
